# DiscordLocalLLM

./: .gitignore  README.md  pyproject.toml
LocalLLMBot/: .dockerignore  Dockerfile  app.py  docker-compose.yml  personality.json
